[gd_scene load_steps=4 format=3 uid="uid://bt7lobwawrwk2"]

[ext_resource type="Script" uid="uid://dl7la46te5jhw" path="res://Scenes/UI/ui.gd" id="1_ahcct"]
[ext_resource type="FontFile" uid="uid://bogk068pqmijs" path="res://Scenes/UI/PTN77F.ttf" id="2_de23q"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ej242"]
bg_color = Color(0, 0, 0, 0.670588)

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.2, 1.2)
script = ExtResource("1_ahcct")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(205, 215)
layout_mode = 0
offset_right = 205.0
offset_bottom = 251.0

[node name="Panel" type="Panel" parent="MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ej242")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel"]
layout_mode = 0
offset_left = 5.0
offset_right = 153.0
offset_bottom = 215.0
theme_override_constants/separation = -5

[node name="LevelLabel" type="Label" parent="MarginContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_de23q")
theme_override_font_sizes/font_size = 30
text = "Level:"
uppercase = true

[node name="DeathsLabel" type="Label" parent="MarginContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_de23q")
theme_override_font_sizes/font_size = 30
text = "Deaths:"
uppercase = true

[node name="ScoreLabel" type="Label" parent="MarginContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_de23q")
theme_override_font_sizes/font_size = 30
text = "Score:"
uppercase = true

[node name="ModifierLabel" type="Label" parent="MarginContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_de23q")
theme_override_font_sizes/font_size = 30
text = "Modifier:"
uppercase = true

[node name="TimeLabel" type="Label" parent="MarginContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_de23q")
theme_override_font_sizes/font_size = 30
text = "Time:"
uppercase = true

[node name="CheckpointLabel" type="Label" parent="MarginContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_de23q")
theme_override_font_sizes/font_size = 30
text = "Checkpoint:"
uppercase = true

[node name="DiamondsLabel" type="Label" parent="MarginContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_de23q")
theme_override_font_sizes/font_size = 30
text = "Diamonds:"
uppercase = true
